Bugfix/E1-393 Added css changes to fix alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tiles-slider.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/tiles-slider.scss
@@ -418,19 +418,6 @@
       padding: 1.5rem;
       padding-bottom: 3rem;
       text-align: left;
-      h2 {
-        color: $almost-black;
-        font-size: toRem(18);
-        line-height: toRem(24);
-        margin: 0;
-        margin-bottom: 0.5rem;
-
-        @include respond-to-min($desktop) {
-          font-size: toRem(28);
-          line-height: toRem(35);
-          margin-bottom: 1rem;
-        }
-      }
     }
   }
 
@@ -460,13 +447,6 @@
       *[lang="ar"] *[dir="rtl"] & {
         text-align: right;
       }
-    }
-
-    .tile-boxes-title-small h2 {
-      color: $almost-black;
-      font-size: toRem(28);
-      line-height: toRem(35);
-      margin-bottom: 1rem;
     }
   }
 
